fix(fhir.core): add properties to supported properties array where ... ... uri is not present
- These are the official FHIR properties now