@@ -16,6 +16,7 @@
 package com.b2international.snowowl.fhir.core.request.codesystem;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -129,38 +130,51 @@ final class FhirCodeSystemLookupRequest extends FhirCodeSystemOperationRequest<C
 	}
 	
 	private void validateRequestedProperties(CodeSystem codeSystem) {
-		// no property requested, nothing to validate
+		// No property requested, nothing to validate
 		if (parameters.getPropertyValues().isEmpty()) {
 			return;
 		}
-		
-		final Set<String> requestedProperties = Set.copyOf(parameters.getPropertyValues());
-		// first check if any of the properties are lookup request properties
-		final Set<String> nonLookupProperties = Sets.difference(requestedProperties, CodeSystemLookupParameters.OFFICIAL_R5_PROPERTY_VALUES);
 
-		// second check if the remaining unsupported properties supported by the CodeSystem either via full URL
-		final Set<String> supportedProperties = codeSystem.getProperty() == null 
-				? Collections.emptySet() 
-				: codeSystem.getProperty().stream()
-					.map(CodeSystem.PropertyComponent::getUri)
-					// A CodeSystem.PropertyComponent can exist without a URI, in that case getUri() returns null
+		final Set<String> requestedProperties = Set.copyOf(parameters.getPropertyValues());
+
+		final List<CodeSystem.PropertyComponent> codeSystemProperties = codeSystem.getProperty() == null
+				? Collections.emptyList()
+				: codeSystem.getProperty();
+		
+		// Official properties are always supported
+		final Set<String> lookupProperties = CodeSystemLookupParameters.OFFICIAL_R5_PROPERTY_VALUES;
+		
+		// Collect property URIs and codes from the code system
+		final Set<String> supportedPropertyUris = codeSystemProperties.stream()
+				.map(CodeSystem.PropertyComponent::getUri)
+				.filter(Objects::nonNull)
+				.collect(Collectors.toSet());
+		
+		final Set<String> supportedPropertyCodes = codeSystemProperties.stream()
+				.map(CodeSystem.PropertyComponent::getCode)
+				.filter(Objects::nonNull)
+				.collect(Collectors.toSet());
+		
+		// Check if any of the properties are lookup request properties
+		final Set<String> nonLookupProperties = Sets.difference(requestedProperties, lookupProperties);
+		
+		// First, check if any of the properties match a supported property URI
+		final Set<String> unsupportedByUri = Sets.difference(nonLookupProperties, supportedPropertyUris);
+		
+		// Second, check if any of the properties match a supported property code
+		final Set<String> unsupportedProperties = Sets.difference(unsupportedByUri, supportedPropertyCodes);
+
+		if (!unsupportedProperties.isEmpty()) {
+			final Set<String> supportedPropertiesDisplay = codeSystemProperties.stream()
+					.map(property -> property.getUri() != null ? property.getUri() : property.getCode())
 					.filter(Objects::nonNull)
 					.collect(Collectors.toSet());
-		final Set<String> unsupportedProperties = Sets.difference(nonLookupProperties, supportedProperties);
-		
-		// or via their code only
-		final Set<String> supportedCodes = codeSystem.getProperty() == null 
-				? Collections.emptySet() 
-				: codeSystem.getProperty().stream().map(CodeSystem.PropertyComponent::getCode).collect(Collectors.toSet());
-		final Set<String> unsupportedCodes = Sets.difference(unsupportedProperties, supportedCodes);
-		
-		if (!unsupportedCodes.isEmpty()) {
-			if (unsupportedCodes.size() == 1) {
-				throw new BadRequestException(String.format("Unrecognized property %s. Supported properties are: %s.", unsupportedCodes, supportedProperties), "LookupRequest.property");
+
+			if (unsupportedProperties.size() == 1) {
+				throw new BadRequestException(String.format("Unrecognized property %s. Supported properties are: %s.", unsupportedProperties, supportedPropertiesDisplay), "LookupRequest.property");
 			} else {
-				throw new BadRequestException(String.format("Unrecognized properties %s. Supported properties are: %s.", unsupportedCodes, supportedProperties), "LookupRequest.property");
+				throw new BadRequestException(String.format("Unrecognized properties %s. Supported properties are: %s.", unsupportedProperties, supportedPropertiesDisplay), "LookupRequest.property");
 			}
 		}
 	}
-
 }
